# ddd-fastapi-kafka_chat

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  storages.yml  test_mongo.py
app/application/api/: main.py  schemas.py
app/application/api/messages/: handlers.py  shemas.py
app/domain/entities/: base.py  messages.py
app/domain/eventes/: base.py  message.py
app/domain/exception/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  convertes.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exception/: base.py  mediator.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixture.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/logic/: conftest.py  test_messages.py
app/tests/values/: test_messages.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
