[tool.poetry]
name = "chat-project"
version = "1.0.0"
description = "A simple chat app built with FastAPI"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["httpx"], version = "^0.128.0"}
uvicorn = "^0.18.2"
pytest = "^9.0.1"
faker = "^39.0.0"
punq = "^0.7.0"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
motor = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"